team/game dash spacing fixes

--- a/src/dashboards/GameActive/GameActive.css
+++ b/src/dashboards/GameActive/GameActive.css
@@ -52,13 +52,13 @@
 
 #gameactive-loading-card{
   text-align: center;
-  width: 98%;
+  width: 75%;
   min-height: 350px;
   background-color: white;
   border-radius: 6px;
   box-shadow: 0 0 4px gray;
   padding: 10px;
-  margin: 0 auto;
+  margin: 100px auto 0 auto;
   font-family: 'Roboto', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
